# samesame

./: .gitignore  Cargo.toml  README.md  build-macos.sh  build-windows.bat  dev-macos.sh  dev-windows.bat
.claude/: settings.local.json
macos-client/: package.json
macos-client/src/: index.html  main.js  styles.css
macos-client/src-tauri/: Cargo.toml  tauri.conf.json
macos-client/src-tauri/src/: event_tap.rs  event_tap_simple.rs  gestures.rs  gestures_simple.rs  lib 2.rs  lib.rs  main.rs  network.rs  state.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
windows-server/: Cargo.toml
windows-server/src/: input_simulator.rs  main.rs
