[workspace]
members = [
    "protocol",
    "windows-server",
    "macos-client/src-tauri"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
